add new version

--- a/inha_analysis.ipynb
+++ b/inha_analysis.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e2e43d1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-05T04:47:32.642288Z",
-     "start_time": "2022-10-05T04:47:32.618154Z"
+     "end_time": "2022-11-09T13:03:58.588587Z",
+     "start_time": "2022-11-09T13:03:55.539366Z"
     }
    },
    "outputs": [],
    "source": [
-    "import BigKindsParser as bkp\n",
+    "# import BigKindsParser as bkp\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "17383dd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-05T04:44:27.125528Z",
-     "start_time": "2022-10-05T04:44:27.102438Z"
+     "end_time": "2022-11-09T13:04:07.498327Z",
+     "start_time": "2022-11-09T13:04:07.479828Z"
     }
    },
    "outputs": [],
@@ -48,26 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3a66172e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-05T04:43:47.110269Z",
-     "start_time": "2022-10-05T04:43:45.158999Z"
+     "end_time": "2022-11-09T13:05:00.792621Z",
+     "start_time": "2022-11-09T13:05:00.417066Z"
     }
    },
    "outputs": [],
    "source": [
-    "address = \"C:\\\\Users\\\\cjsso\\\\project\\\\inha_3month.xlsx\"\n",
-    "news_df = pd.read_excel(address, engine = 'openpyxl')"
+    "news_df = pd.read_excel(\"./inha_3month.xlsx\", engine = 'openpyxl')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c059c110",
+   "id": "bd1b39cd",
    "metadata": {},
    "source": [
-    "## 언론사 분포 확인"
+    "## 언론사 확인"
    ]
   },
   {
@@ -1480,7 +1479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1494,7 +1493,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
    "base_numbering": 1,
