--- a/inha_analysis.ipynb
+++ b/inha_analysis.ipynb
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "wc = WordCloud(font_path = 'C:\\\\Users\\\\cjsso\\\\AppData\\\\Local\\\\Microsoft\\\\Windows\\\\Fonts\\\\NanumBarunGothic.ttf',\n",
+    "wc = WordCloud(font_path = './NanumBarunGothic.ttf',\n",
     "    width = 500,\n",
     "    height = 500,\n",
     "    background_color='white').generate_from_frequencies(key_words.set_index('단어').to_dict()[\"빈도\"])\n",
@@ -542,7 +542,7 @@
     }
    ],
    "source": [
-    "wc = WordCloud(font_path = 'C:\\\\Users\\\\cjsso\\\\AppData\\\\Local\\\\Microsoft\\\\Windows\\\\Fonts\\\\NanumBarunGothic.ttf',\n",
+    "wc = WordCloud(font_path = './NanumBarunGothic.ttf',\n",
     "    width = 500,\n",
     "    height = 500,\n",
     "    background_color='white').generate_from_frequencies(news.set_index('단어').to_dict()[\"빈도\"])\n",
@@ -986,7 +986,7 @@
     }
    ],
    "source": [
-    "wc = WordCloud(font_path = 'C:\\\\Users\\\\cjsso\\\\AppData\\\\Local\\\\Microsoft\\\\Windows\\\\Fonts\\\\NanumBarunGothic.ttf',\n",
+    "wc = WordCloud(font_path = './NanumBarunGothic.ttf',\n",
     "    width = 500,\n",
     "    height = 500,\n",
     "    background_color='white').generate_from_frequencies(title_df.set_index('단어').to_dict()[\"빈도\"])\n",
@@ -1513,7 +1513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.12 (default, Oct 12 2021, 03:01:40) [MSC v.1916 64 bit (AMD64)]"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
