--- a/waset_data_analysis.ipynb
+++ b/waset_data_analysis.ipynb
@@ -442,7 +442,7 @@
     }
    ],
    "source": [
-    "wc = WordCloud(font_path = 'C:\\\\Users\\\\cjsso\\\\AppData\\\\Local\\\\Microsoft\\\\Windows\\\\Fonts\\\\NanumBarunGothic.ttf',\n",
+    "wc = WordCloud(font_path = 'C:\\NanumBarunGothic.ttf',\n",
     "    width = 300,\n",
     "    height = 300,\n",
     "    background_color='white').generate_from_frequencies(waset_inst_dev.set_index('inst').to_dict()['count'])\n",
@@ -787,7 +787,7 @@
    ],
    "source": [
     "#wordcloud about title's word frequencies\n",
-    "wc = WordCloud(font_path = 'C:\\\\Users\\\\cjsso\\\\AppData\\\\Local\\\\Microsoft\\\\Windows\\\\Fonts\\\\NanumBarunGothic.ttf',\n",
+    "wc = WordCloud(font_path = '\\NanumBarunGothic.ttf',\n",
     "    width = 500,\n",
     "    height = 500,\n",
     "    background_color='white').generate_from_frequencies(titles.set_index('word').to_dict()['count'])\n",
@@ -1240,7 +1240,7 @@
    ],
    "source": [
     "#wordcloud about namefrequencies\n",
-    "wc = WordCloud(font_path = 'C:\\\\Users\\\\cjsso\\\\AppData\\\\Local\\\\Microsoft\\\\Windows\\\\Fonts\\\\NanumBarunGothic.ttf',\n",
+    "wc = WordCloud(font_path = '\\NanumBarunGothic.ttf',\n",
     "    width = 500,\n",
     "    height = 500,\n",
     "    background_color='white').generate_from_frequencies(author_df.set_index('name').to_dict()['freq'])\n",
